@startuml Wissenstest_04_Web_Servlet_Layer
!theme plain
skinparam classBackgroundColor #E8F8E8
skinparam classBorderColor #00AA00
skinparam classArrowColor #00AA00
skinparam fontSize 11

title Wissenstest - Klassendiagramm Teil 4: Web/Servlet Layer (Controller)

' ==================== SERVLET PARENT CLASS ====================
class HttpServlet {
  <<abstract>>
  --
  #doGet(HttpServletRequest, HttpServletResponse): void
  #doPost(HttpServletRequest, HttpServletResponse): void
  -service(HttpServletRequest, HttpServletResponse): void
}

' ==================== SERVLET CLASSES ====================
class AuthServlet {
  -authService: AuthService
  -logger: Logger
  --
  #doGet(HttpServletRequest, HttpServletResponse): void
  #doPost(HttpServletRequest, HttpServletResponse): void
  -handleLogin(HttpServletRequest, HttpServletResponse): void
  -handleRegister(HttpServletRequest, HttpServletResponse): void
  -handleLogout(HttpServletRequest, HttpServletResponse): void
  -handleForgotPassword(HttpServletRequest, HttpServletResponse): void
  -setSessionAttribute(HttpSession, String key, Object value): void
  -getSessionAttribute(HttpSession, String key): Object
  -invalidateSession(HttpSession): void
  -validateLoginInput(String, String): boolean
}

class TestServlet {
  -testService: TestService
  -progressionService: ProgressionService
  -logger: Logger
  --
  #doGet(HttpServletRequest, HttpServletResponse): void
  #doPost(HttpServletRequest, HttpServletResponse): void
  -handleListTests(HttpServletRequest, HttpServletResponse): void
  -handleGetTest(HttpServletRequest, HttpServletResponse): void
  -handleStartTest(HttpServletRequest, HttpServletResponse): void
  -handleSubmitTest(HttpServletRequest, HttpServletResponse): void
  -handleGetResult(HttpServletRequest, HttpServletResponse): void
  -handleLearnMode(HttpServletRequest, HttpServletResponse): void
  -parseAnswers(HttpServletRequest): Map<Integer, String>
  -authorizeUserForTest(User, Test): boolean
}

class QuestionServlet {
  -questionDao: QuestionDao
  -authService: AuthService
  -logger: Logger
  --
  #doGet(HttpServletRequest, HttpServletResponse): void
  #doPost(HttpServletRequest, HttpServletResponse): void
  -handleListQuestions(HttpServletRequest, HttpServletResponse): void
  -handleCreateQuestion(HttpServletRequest, HttpServletResponse): void
  -handleUpdateQuestion(HttpServletRequest, HttpServletResponse): void
  -handleDeleteQuestion(HttpServletRequest, HttpServletResponse): void
  -handleAddAnswerOption(HttpServletRequest, HttpServletResponse): void
  -handleAddClozeToken(HttpServletRequest, HttpServletResponse): void
  -parseQuestionData(HttpServletRequest): Question
  -authorizeQuestionEdit(User, Question): boolean
}

class AdminServlet {
  -adminService: AdminService
  -authService: AuthService
  -logger: Logger
  --
  #doGet(HttpServletRequest, HttpServletResponse): void
  #doPost(HttpServletRequest, HttpServletResponse): void
  -handleAdminPanel(HttpServletRequest, HttpServletResponse): void
  -handleUserManagement(HttpServletRequest, HttpServletResponse): void
  -handleUserActivation(HttpServletRequest, HttpServletResponse): void
  -handlePasswordReset(HttpServletRequest, HttpServletResponse): void
  -handleStatistics(HttpServletRequest, HttpServletResponse): void
  -handleUserDelete(HttpServletRequest, HttpServletResponse): void
  -authorizeAdmin(HttpServletRequest): boolean
  -authorizeAdmin(HttpServletRequest, HttpServletResponse): boolean
}

class ProgressionServlet {
  -progressionService: ProgressionService
  -attemptDao: AttemptDao
  -logger: Logger
  --
  #doGet(HttpServletRequest, HttpServletResponse): void
  -handleGetStats(HttpServletRequest, HttpServletResponse): void
  -handleGetAttempts(HttpServletRequest, HttpServletResponse): void
  -handleGetTestStats(HttpServletRequest, HttpServletResponse): void
  -getSessionUser(HttpServletRequest): User
  -authorizeRequest(HttpServletRequest): boolean
}

class FilterAuthenticator {
  <<filter>>
  -logger: Logger
  --
  +doFilter(ServletRequest, ServletResponse, FilterChain): void
  -isAuthenticatedRequest(HttpServletRequest): boolean
  -getAuthenticatedUser(HttpSession): User
  -requireAuthentication(HttpServletRequest, HttpServletResponse): void
  -checkAdminRole(HttpSession): boolean
}

' ==================== SERVICE REFERENCES ====================
class AuthService {
  <<interface reference>>
}

class TestService {
  <<interface reference>>
}

class ProgressionService {
  <<interface reference>>
}

class AdminService {
  <<interface reference>>
}

class QuestionDao {
  <<interface reference>>
}

class AttemptDao {
  <<interface reference>>
}

class Logger {
  <<utility>>
}

' ==================== RELATIONSHIPS ====================

AuthServlet --|> HttpServlet : extends
TestServlet --|> HttpServlet : extends
QuestionServlet --|> HttpServlet : extends
AdminServlet --|> HttpServlet : extends
ProgressionServlet --|> HttpServlet : extends

AuthServlet --> AuthService : uses
TestServlet --> TestService : uses
TestServlet --> ProgressionService : uses
QuestionServlet --> QuestionDao : uses
QuestionServlet --> AuthService : uses
AdminServlet --> AdminService : uses
AdminServlet --> AuthService : uses
ProgressionServlet --> ProgressionService : uses
ProgressionServlet --> AttemptDao : uses

AuthServlet --> Logger : uses
TestServlet --> Logger : uses
QuestionServlet --> Logger : uses
AdminServlet --> Logger : uses
ProgressionServlet --> Logger : uses

FilterAuthenticator --> AuthService : uses
FilterAuthenticator --> Logger : uses

note right of AuthServlet
  Handelt HTTP-Requests für:
  - Login (/auth/login)
  - Logout (/auth/logout)
  - Registrierung (/auth/register)
  - Passwort-Reset
  
  Verwaltet Sessions
end note

note right of TestServlet
  Handelt HTTP-Requests für:
  - Test-Liste (/test/list)
  - Test-Start (/test/start)
  - Test-Submit (/test/submit)
  - Ergebnisse (/test/result)
  - Lernmodus (/test/learn)
end note

note right of AdminServlet
  Handelt Admin-Requests:
  - Admin-Panel (/admin/panel)
  - Benutzer-Verwaltung
  - Passwort-Resets
  - Statistiken
  
  Benötigt Admin-Autorisierung!
end note

note right of FilterAuthenticator
  Servlet-Filter zur
  zentralen Authentifizierung
  
  Wird VOR jedem Servlet
  aufgerufen
end note

note bottom
  Alle Servlets erben von HttpServlet
  und implementieren Request-Handling
end note

@enduml
